Service methods commented